# aurora

./: .env  .gitignore  HTTPX_JSON_PARSING_EXPLANATION.md  OPENROUTER_EMPTY_RESPONSE_ISSUE.md  README.md  alembic.ini  audio_extractor.py  av_organizer_pro.py  bilingual_combiner.py  config.py  config.yml  data.sqlite3  example.env  exceptions.py  linear.py  logging_config.py  main.py  metadata.json  movie_crawler.py  organizer.py  preprocessor.py  prompt.txt  pyproject.toml  requirement.txt  run.bat  run_organizer.bat  scanner.py  sqlite.db  status.json  status.py  status_manager.py  subtitle_generator.py  test.py  test_api.py  test_api_success_rate.py  test_enhanced_client.py  test_non_stream.py  test_openai_sdk_fixed.py  test_orchestrator.py  test_real_request.py  (+6 more)
alembic/: env.py
alembic/versions/: 41853dd4ea66_add_series_table_and_movie_series_id.py
data_structures/: subtitle_node.py
docs/: timeline.md  to do list.md
domain/: context.py  enums.py  movie.py  results.py  subtitle.py
metadata_cache/: actors_cache.json  directors_cache.json  genres_cache.json
models/: context.py  enums.py  movie.py  process_context.py  query_result.py  results.py  tasktype.py
orms/: models.py
output/: DDK001.srt  [Dogma] あれから10年 秘儀伝授 男のバイブルVOL．1 完全潮吹き入門(ddt-185.srt
output/DDT-185/: example_video.corrected.srt
pipeline/: _pipeline.py  base.py  bilingual_subtitle.py  context.py  correct.py  denoise_audio.py  extract_audio.py  pipeline.py  scrape.py  transcribe_audio.py  translate.py
pipline_stages/: base.py  translate.py
poetry-demo/: pyproject.toml
scripts/: test_scanner.py  test_scrape.py
services/code_extract/: extractor.py  noise.txt  prefix.txt
services/denoise/: denoiser.py  spleeter_denoiser.py  spleeter_denoiser_fixed.py
services/pipeline/: database_manager.py  manifest.py
services/transcription/: factory.py  quality_checker.py  transcriber.py  transcription_service.py
services/translate/: orchestractor.py  prompts.py  provider.py  strategies.py
services/translation/: orchestrator.py  prompts.py  provider.py  strategies.py
services/web_request/: javbus_web_service.py  missav_web_service.py  test_response_cn.html  test_response_ja.html  web_service.py
src/aurora/: cli.py  constants.py
test_mode/: PRED-726-corrected-differences.json  PRED-726-corrected-raw.txt  PRED-726-corrected-raw1.txt  PRED-726-uncensored-nyap2p.com.srt  enhanced_client_result.srt  logged_result.srt  non_stream_full_result.srt  non_stream_result.srt  openai_sdk_fixed_result.srt  raw_response.txt
tests/: conftest.py  test_config_manager.py  test_models.py
utils/: actor_parser.py  bilingual_subtitle_generator.py  config.py  file_utils.py  logger.py  prompt_utils.py  subtitle_utils.py
(+71 files in other folders)
