[project]
name = "aurora"
version = "0.1.0"
description = "AV subtitle pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "demucs>=4.0.1",
    "langfuse>=3.10.5",
    "openai>=2.9.0",
    "openai-whisper>=20250625",
    "pylint>=4.0.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
