[project]
name = "aurora"
version = "0.1.0"
description = "AV subtitle pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bs4>=0.0.2",
  "demucs>=4.0.1",
  "langfuse>=3.10.5",
  "noisereduce>=3.0.3",
  "openai>=2.9.0",
  "openai-whisper>=20250625",
  "pydantic>=2.12.5",
  "pylint>=4.0.4",
  "pytest>=9.0.2",
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.3",
  "sqlalchemy>=2.0.45",
]
[tool.pylint.main]
ignore-paths = [".venv", ".git", ".claude"]

[tool.pylint.design]
min-public-methods = 0
max-args = 8

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
]

[tool.black]
line-length = 88
