[project]
name = "aurora"
version = "0.1.0"
description = "AV subtitle pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.2",
  "aurora-scraper",
  "bs4>=0.0.2",
  "cloudscraper>=1.2.71",
  "datetime>=6.0",
  "demucs>=4.0.1",
  "noisereduce>=3.0.3",
  "openai>=2.9.0",
  "openai-whisper>=20250625",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.3",
  "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
aurora = "aurora.cli:main"

[tool.pylint.main]
ignore-paths = [".venv", ".git", ".claude"]

[tool.pylint.design]
min-public-methods = 0
max-args = 8

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
]

[tool.black]
line-length = 88

[tool.uv.sources]
aurora-scraper = { path = "../aurora-scraper", editable = true }

[dependency-groups]
dev = [
  "black>=25.12.0",
  "langfuse>=3.10.6",
  "pylint>=4.0.4",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-vcr>=1.0.2",
]
